try fix title page issue on iphone

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
 	margin: auto;
 	position: relative;
 	overflow: clip;
+	width: 100%;
+	height: 100%;
 }
 
 h1, h2 {
